tdf#166005 vcl: cairo: use correct order in RGBA case

When built with --enable-cairo-rgba parameter, green
and blue colors were swapped.

Likely since ff46c8bf598481ae37022414f3495c1e9385eb7c,
but these macros are already defined in
cff87aac4ec77957569377d690bc4aa8f7146e0d.

Change-Id: Ia1a382c66e8e5ceb9d3d7eaa0f0d6287a6870cbf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183642
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>